# git-crev

./: Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
ci/: prep_deploy.sh
src/: index.rs  local.rs  main.rs  opts.rs  shared.rs  term.rs
src/commands/: add.rs  fetch.rs  id.rs  import.rs  mod.rs  publish.rs  status.rs
src/commands/add/: interactive.rs  mod.rs
