[package]
name = "git-crev"
version = "0.1.0"
authors = ["Robyn Ffrancon <robyn.ffrancon@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "git-crev"
path = "src/main.rs"

[dependencies]
atty = "0.2"
cargo = "0.44"
common_failures = "0.1"
crates_io_api = "0.5"
crev-common = "0.22"
crev-data = "0.22"
crev-lib = "0.22"
failure = "0.1"
geiger = "0.3.2"
git2 = "0.13"
insideout = "0.2"
resiter = "0.3"
semver = "0.9"
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
structopt = "0.2.16"
term = "0.6"
tokei = "10"
walkdir = "2"
time = "0.1.42"
env_logger = { version = "0.6.2", default-features = false, features = ["termcolor", "atty", "humantime"]}
lazy_static = "1.3"
rayon = "1.1"
crossterm = "0.9.6"
crossbeam = "0.7"
termimad = "0.6"
petgraph = "*"
num_cpus = "1.10"

[features]
default = []

documentation = []

[package.metadata.docs.rs]
all-features = true
